src/objects/c2g__codaMappingFormat__c.object
<CustomObject>
    <description>Mappings used for document input using FinancialForce XL.</description>
    <fields>
        <fullName>c2g__DetailOffSetRow__c</fullName>
        <label>Detail Off Set Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DetailPropNoCol__c</fullName>
        <label>Detail Prop No Col</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DetailResultCol__c</fullName>
        <label>Detail Result Col</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HeaderOffSetRow__c</fullName>
        <label>Header Off Set Row</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderPropNoCol__c</fullName>
        <label>Header Prop No Col</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderResultCol__c</fullName>
        <label>Header Result Col</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit Of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mapping Format</label>
    <nameField>
        <label>Mapping Format Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>